--- a/deployment/k8s/backend-user-deployment.yaml
+++ b/deployment/k8s/backend-user-deployment.yaml
@@ -1,11 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     service: backend-user
   name: backend-user
 spec:
-  replicas: 2
+  selector:
+    matchLabels:
+      service: backend-user
+  replicas: 1
   template:
     metadata:
       labels:
@@ -55,8 +58,8 @@ spec:
               key: UDAGRAM_DATABASE_USERNAME
         - name: UDAGRAM_DATABASE_DIALECT
           valueFrom:
-            secretKeyRef:
-              name: env-secret
+            configMapKeyRef:
+              name: env-config
               key: UDAGRAM_DATABASE_DIALECT  
       restartPolicy: Always
 
