--- a/deployment/k8s/frontend-deployment.yaml
+++ b/deployment/k8s/frontend-deployment.yaml
@@ -1,11 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     service: frontend
   name: frontend
 spec:
-  replicas: 2
+  selector:
+    matchLabels:
+      service: frontend
+  replicas: 1
   template:
     metadata:
       labels:
