--- a/deployment/k8s/reverseproxy-deployment.yaml
+++ b/deployment/k8s/reverseproxy-deployment.yaml
@@ -1,11 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     service: reverseproxy
   name: reverseproxy
 spec:
-  replicas: 2
+  selector:
+    matchLabels:
+      service: reverseproxy
+  replicas: 1
   template:
     metadata:
       labels:
@@ -25,5 +28,3 @@ spec:
         ports:
         - containerPort: 8080
       restartPolicy: Always
-
-
