--- a/deployment/k8s/backend-user-deployment.yaml
+++ b/deployment/k8s/backend-user-deployment.yaml
@@ -55,8 +55,8 @@ spec:
               key: UDAGRAM_DATABASE_USERNAME
         - name: UDAGRAM_DATABASE_DIALECT
           valueFrom:
-            secretKeyRef:
-              name: env-secret
+            configMapKeyRef:
+              name: env-config
               key: UDAGRAM_DATABASE_DIALECT  
       restartPolicy: Always
 
